[package]

name = "sneak_poc"
version = "0.0.1"
authors = ["Mark Schifflin <rschifflin@hotmail.com>"]

[dependencies.component_store]
git = "https://github.com/rschifflin/rust-component-store"

[dependencies.lazy_static]
git = "https://github.com/Kimundi/lazy-static.rs"

[dependencies.ncurses]
git = "https://github.com/jeaye/ncurses-rs"

[dependencies.pubsub]
git = "https://github.com/rschifflin/rust-pubsub"

[dependencies.stainless]
git = "https://github.com/reem/stainless.git"

[dependencies.uuid]
git = "https://github.com/rust-lang/uuid"

